# Evice-Intent-Ecosystem

./: .gitignore  Cargo.toml  README.md
crates/aegis-contracts/bridge-contract/: Cargo.toml
crates/aegis-contracts/bridge-contract/src/: handlers.rs  lib.rs  state.rs
crates/aegis-contracts/erc721/: Cargo.toml
crates/aegis-contracts/erc721/src/: handlers.rs  lib.rs  state.rs
crates/aegis-contracts/fungible-token/: Cargo.toml
crates/aegis-contracts/fungible-token/src/: bridge.rs  handlers.rs  lib.rs  state.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: borsh_helpers.rs  lib.rs
crates/aegis-node/: Cargo.toml  build.rs  rpc.proto
crates/aegis-node/src/: block_tree.rs  blockchain.rs  consensus.rs  crypto.rs  genesis.rs  governance.rs  keystore.rs  l2_aggregation.rs  l2_circuit.rs  lib.rs  main.rs  mempool.rs  metrics.rs  p2p.rs  rpc.rs  rpc_client.rs  sequencer_selection.rs  serde_helpers.rs  snapshot.rs  state.rs  trie_codec.rs  wasm_runtime.rs
crates/aegis-sdk/: Cargo.toml
crates/aegis-sdk/src/: bridge.rs  env.rs  lib.rs  storage.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  processor.rs  wal.rs
crates/sequencer-node/: Cargo.toml  build.rs  ca.pem
crates/sequencer-node/src/: main.rs  settlement.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: alloy_db.rs  lib.rs
crates/solver-service/: Cargo.toml  build.rs
crates/solver-service/src/: executor.rs  main.rs  strategy.rs
crates/user-client/: Cargo.toml  build.rs
crates/user-client/src/: main.rs
proto/: service.proto
