# ====================================================================
#                  EVICE-INTENT-ECOSYSTEM - VIRTUAL WORKSPACE
# ====================================================================
[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/engine",
    "crates/sequencer-node",
    "crates/simulator",
    "crates/solver-service",
    "crates/user-client",
]

# ====================================================================
#                        DEPENDENSI BERSAMA
# ====================================================================
[workspace.dependencies]

# --- INTERNAL CRATES ---
common = { path = "crates/common" }
engine = { path = "crates/engine" }
simulator = { path = "crates/simulator" }
sequencer = { path = "crates/sequencer-node" }

# --- EXTERNAL LIBRARIES ---
# Concurrency & Runtime
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.2"       
rand_core = "0.6"
hdrhistogram = "7.5"
dotenv = "0.15"
chrono = "0.4.42"

# Serialization & Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
slab = "0.4"
anyhow = "1.0"
hex = "0.4"
url = "2.5"
thiserror = "1.0"
derive_more = { version = "2.1.1", features = ["full"] } 
futures = "0.3"
futures-util = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Networking (gRPC & HTTP)
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Blockchain Core (Alloy & Revm)
alloy = { version = "1.3.0", features = ["full", "node-bindings", "rpc-types-eth", "providers", "signers", "signer-local", "transports", "transport-ws"] }
alloy-primitives = "1.5.2"
revm = { version = "33.1.0", features = ["std", "secp256k1", "optional_balance_check"] }
revm-primitives = { version = "21.0.2", features = ["std"] }