# ====================================================================
#                  EVICE-INTENT-ECOSYSTEM - VIRTUAL WORKSPACE
# ====================================================================
[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/engine",
    "crates/sequencer-node",
    "crates/simulator",
    "crates/solver-service",
    "crates/user-client",
    # --- THE SETTLEMENT LAYER --- #
    "crates/aegis-node",
    "crates/aegis-core",
    "crates/aegis-sdk",
    # "crates/aegis-contracts",
]

# ====================================================================
#                        DEPENDENSI BERSAMA
# ====================================================================
[workspace.dependencies]

# --- INTERNAL CRATES ---
common = { path = "crates/common" }
engine = { path = "crates/engine" }
simulator = { path = "crates/simulator" }
sequencer = { path = "crates/sequencer-node" }
aegis-node = { path = "crates/aegis-node" }
aegis-core = { path = "crates/aegis-core" }

# --- EXTERNAL LIBRARIES ---
# Concurrency & Runtime
tokio = { version = "1", features = ["full"] }
tarpc = "0.29"
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.9.2"       
rand_core = "0.6"
hdrhistogram = "7.5"
dotenv = "0.15"
chrono = "0.4.42"

# Serialization & Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4"
anyhow = "1.0"
hex = "0.4"
url = "2.5"
thiserror = "2.0.16"
derive_more = { version = "2.1.1", features = ["full"] } 
futures = "0.3"
futures-util = "0.3"

# Networking (gRPC & HTTP)
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Blockchain Core (Alloy & Revm)
alloy = { version = "1.3.0", features = ["full", "node-bindings", "rpc-types-eth", "providers", "signers", "signer-local", "transports", "transport-ws"] }
alloy-primitives = "1.5.2"
revm = { version = "33.1.0", features = ["std", "secp256k1", "optional_balance_check"] }
revm-primitives = { version = "21.0.2", features = ["std"] }

# ==============================================================================
#                        THE SETTLEMENT LAYER DEPENDENCIES
# ==============================================================================
serde_with = { version = "3.8.1", features = ["macros"] }
serde_bytes = "0.11"
bincode = { version = "2.0.1", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
borsh = { version = "1.5.7", features = ["derive"] }
zstd = "0.13"
tempfile = "3.10"
flate2 = "1.0"
spin = "0.10.0"
lru = "0.16.0"
num_cpus = "1.17.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"

# --- Asinkronus & Jaringan ---
actix-web = "4.11.0"
actix-web-ratelimit = "0.1.1"
tiny_http = "0.12.0"
async-recursion = "1.1.1"

# --- Kriptografi & Keamanan ---
sha2 = "0.10.8"
sha3 = "0.10.8"
rpassword = "7.3.1"
merlin = "3.0.0"
schnorrkel = { version = "0.11", features = ["getrandom"] }
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
scrypt = "0.11.0"
blake2 = "0.10.6"
generic-array = "1.3.4"
elliptic-curve = { version = "0.13.8", features = ["sec1", "arithmetic"] }
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
cipher = { version = "0.4.4", features = ["alloc"] }
aead = "0.5.2"
aes = "0.8.4"
hmac = "0.12.1"
cbc = "0.1.2"
ecdsa = { version = "0.16.9" }
signature = { version = "2.2.0" }
zeroize = "1.8.1"

# --- Logging & Observability ---
log = "0.4"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
env_logger = "0.11.3"
lazy_static = "1.4.0"
prometheus = "0.14"

# --- Jaringan P2P (libp2p) ---
libp2p = { version = "0.56.0", features = ["full"] }
libp2p-request-response = { version = "0.29.0", features = ["cbor"] }

# --- RPC (gRPC) ---
rustls = { version = "0.23.5", default-features = false, features = ["ring"] }
prost = "0.14.1"
tonic = { version = "0.14.1", features = ["transport", "codegen", "tls-ring"] }
tonic-build = "0.14.1"
tonic-prost = "0.14.1"
tonic-prost-build = "0.14.1"

# --- Database & State (Trie) ---
rocksdb = { version = "0.24.0", default-features = false, features = ["lz4", "bindgen-runtime"] }
hash-db = "0.16.0"
trie-db = "0.30.0"
trie-root = "0.18.0"
reference-trie = { version = "0.29.1", default-features = false, features = ["std"] }
keccak-hasher = "0.16.0"
memory-db = "0.34.0"
merkle-cbt = "0.3.2"
parity-db = "0.5.4"
parity-scale-codec = { version = "3.6.12", features = ["derive"] }

# --- ZK-SNARKs (arkworks) ---
blst = { version = "0.3.15", default-features = false, features = ["serde"] }
ark-bls12-381 = { version = "0.5", features = ["curve"] }
ark-bls12-377 = { version = "0.5", features = ["curve"] }
ark-groth16 = { version = "0.5", features = ["r1cs"] }
ark-bw6-761 = "0.5"
ark-mnt4-753 = "0.5"
ark-snark = "0.5"
ark-ff = { version = "0.5", features = ["std"] }
ark-ec = "0.5"
ark-r1cs-std = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
ark-std = { version = "0.5", features = ["parallel"] }
ark-crypto-primitives = { version = "0.5", features = ["sponge", "r1cs", "merkle_tree"] }

# --- WASM Runtime ---
wasmer = { version = "6.0.1", features = ["compiler", "cranelift"] }
wasmparser = "0.240.0"
wasmer-middlewares = "6.0.1"
wasmer-engine-universal = "2.3.0"

        