[package]
name = "sequencer-node"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
engine = { workspace = true }
aegis-node = { workspace = true }

tarpc = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }