[package]
name = "solver-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
simulator = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
url = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }